# exercise_json

./: .gitignore  README.md  pyproject.toml  solution.py  verify.py
.github/workflows/: trial.yml
workflows/: trial.yml
